# chatbot

./: .gitignore  README.md  alembic.ini  config.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
chatbot/: db.py  server.py
chatbot/enum/: gender.py  role.py
chatbot/model/: __init__.py  bot.py  dialogue.py  message.py  msgbot.py  msguser.py  user.py
chatbot/repo/: botrepo.py  dialoguerepo.py  messagerepo.py  repodialogue.py  repomsgbot.py  repomsguser.py  repouser.py
chatbot/router/: bot.py  dialogue.py  message.py  msgbot.py  msguser.py  user.py
tests/: test_import.py
tests/enum/: test_gender.py  test_role.py
