
[project]
name = "taruza"
version = "0.0.1"
description = ""
authors = [
    {name = "CHIU.MINTA", email = "evadcmd@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.97.0",
    "asyncpg>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.17",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.2",
]
lint = [
    "black>=23.3.0",
    "isort>=5.12.0",
]
dbmigration = [
    "alembic>=1.11.1",
]

[tool.pdm.scripts]
shell = ". .venv/bin/activate"
serve = "uvicorn chatbot.server:api --reload"
test = "pytest -vv"

[tool.setuptools]
packages = ["chatbot"]

[tool.isort]
profile = "black"
